Bug 1546612 - caretPositionFromPoint does not take iframe transformation into account r=emilio

Using nsLayoutUtils::TransformPoint instead of going through the widget takes the iframe's
transformations into account.

Differential Revision: https://phabricator.services.mozilla.com/D151995